--- a/lab-01/live-demo.html
+++ b/lab-01/live-demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/icons/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Movies List - Home Page</title>
+    <title>My Movies List</title>
     <link rel="stylesheet" href="css/index.css" />
     <script type="module" src="js/index.js"></script>
   </head>
@@ -33,13 +33,8 @@
       <h1 class="text-5xl font-extrabold tracking-tighter">My Movies List</h1>
     </header>
     <main>
-      <di class="flex justify-center mt-10">
-        <button
-          type="button"
-          class="rounded-md bg-white/10 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-white/20">
-          <a href="/live-demo.html"> Click here to see my movie list</a>
-        </button>
-      </div>
+      <div id="app"></div>
     </main>
+    <script src="./node_modules/preline/dist/preline.js"></script>
   </body>
 </html>
