made some minor changes to the file

--- a/lab-01/live-demo.html
+++ b/lab-01/live-demo.html
@@ -33,7 +33,7 @@
       <h1 class="text-5xl font-extrabold tracking-tighter">My Movies List</h1>
     </header>
     <main>
-      <div id="app"></div>
+      <div id="app" class="flex justify-center mt-20"></div>
     </main>
     <script src="./node_modules/preline/dist/preline.js"></script>
   </body>
