testing is done

--- a/lab-02/live-demo.html
+++ b/lab-02/live-demo.html
@@ -285,13 +285,13 @@
 
           <footer class="flex items-center gap-4 w-4/5 mx-auto">
             <button
-              id="exit-delete"
+              id="exit"
               type="button"
               class="rounded-lg w-full border border-zinc-700 px-5 py-2 font-medium text-zinc-700 text-lg">
               Exit
             </button>
             <button
-              id="delete-delete"
+              id="delete"
               type="button"
               class="inline-block rounded-lg w-full bg-zinc-700 px-5 py-2 font-medium text-white text-lg">
               Delete
